add pricing page

--- a/styles/global.css
+++ b/styles/global.css
@@ -16,6 +16,12 @@
     background-size: cover;
   }
 
+  .Pricing {
+    width: 100vw;
+    height: 100vh;
+    background: url("/images/background-purple.png") no-repeat;
+  }
+
   .testimonial-card {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
       rgba(0, 0, 0, 0.22) 0px 10px 10px;
