--- a/styles/global.css
+++ b/styles/global.css
@@ -9,6 +9,13 @@
     background: url("/images/background-purple.png");
   }
 
+  .Homepage h1,
+  .Testimonials h1,
+  .Pricing h1 {
+    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+      0px 18px 23px rgba(0, 0, 0, 0.1);
+  }
+
   .Testimonials {
     width: 100vw;
     height: 100vh;
