--- a/styles/global.css
+++ b/styles/global.css
@@ -11,7 +11,8 @@
 
   .Homepage h1,
   .Testimonials h1,
-  .Pricing h1 {
+  .Pricing h1,
+  .Contact h1 {
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
       0px 18px 23px rgba(0, 0, 0, 0.1);
   }
@@ -21,6 +22,17 @@
     height: 100vh;
     background: url("/images/background-purple.png") no-repeat;
     background-size: cover;
+  }
+  .Contact {
+    width: 100vw;
+    height: 100vh;
+    background: url("/images/background-purple.png") no-repeat;
+    background-size: cover;
+  }
+
+  .Contact input:focus,
+  .Contact textarea:focus {
+    outline-color: #a77ebc;
   }
 
   .Pricing {
